# Modern-C-

./: README.md  test.cpp  test2.cpp
concept/: concept-1.cpp  kinds_of_requirements.cpp  requires_1.cpp
file/: BingSearch.cpp  CMakeLists.txt  read.cpp
functional_programming/: factorial.cpp  filter.cpp  function.cpp  lambda1.cpp  lambda2.cpp  map.cpp  reduce.cpp
functional_programming/template_meta_programming/: fibonachi.cpp  hana.cpp
ranges/: adaptor.cpp  algorithm.cpp  filter_veiw.cpp  find.cpp  reverse_view.cpp  sum_square.cpp  type_name.cpp
solid/: dependency_inversion_principle-1.cpp  dependency_inversion_principle-2.cpp  interface_segregation_principle-2.cpp  liskov_substitution_principle_1.cpp  liskov_substitution_principle_2.cpp
type_deduction/: type_deduction_1.cpp
variadic_template/: variadic_1.cpp
